--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask==0.12.2
 Flask-PyMongo
 ccff
+
+Esta es una nueva linea
+Vamos a resolver conflictos
+Cuando dos o mas personas trabajan en el mismo archivo
